# mnsh

./: .gitignore  CMakeLists.txt  Makefile  README.md  exit_status.c  exit_status.txt  file  issue.txt  issue_leaks.txt  leaks_fd.sh  minishell  minishell.asm  mnsh.c  out  py.py  test.c  test_signals.c  wildcard_test.c
.github/workflows/: build.yml
boards/: heredoc.tldr
incs/: footer.h  header.h  mnsh.h
incs/builtins/: cd.h  echo.h  env.h  exit.h  export.h  pwd.h  unset.h
incs/footer/: clear.h  expand.h  presh.h
incs/header/: evaluator.h  executor.h  lexer.h  minishell.h  parser.h  tokenizer.h  utils.h
libs/libft/: Makefile  error_handler.c  ft_atoi.c  ft_calloc.c  ft_free_split.c  ft_itoa.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_malloc.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strtrim.c  ft_substr.c  ft_syscalls.c  ft_tokennew.c  garbage_cleaner.c  libft.h
libs/libmylist/: Makefile  my_list.h  my_list_clear.c  my_list_erase.c  my_list_new_elem.c  my_list_pop_back.c  my_list_pop_front.c  test.c
libs/libmystr/: Makefile  libmystr.h  my_string_append.c  my_string_append_char.c  my_string_compare.c  my_string_dup.c  my_string_join.c  my_string_split_by_first.c  my_string_sub.c  my_strings_free.c
srcs/: readinput.c
srcs/clear/: my_list_data_clear.c
srcs/evaluator/: evaluator.c
srcs/executor/: eval_tree.c  eval_tree_utils.c  executor_utils.c  handle_redir.c  heredoc_utils.c  redirection_utils.c
srcs/expand_utils/: env_var_exist.c  env_var_update.c  envgetvalue.c  expand.c  expand_term.c  expand_term_utils.c  expand_term_utils_2.c  export_var_exist.c  export_var_update.c  remove_quotes.c
srcs/lexer/: lexer.c  lexer_utils.c
srcs/parser/: parser.c  parser_utils.c
srcs/presh/: presh.c  presh_utils.c
srcs/tokenizer/: analyze_token.c  tokenizer.c  tokenizer2.c  tokenizer3.c  (+4 more)
(+32 files in other folders)
